crates/tribute-front/tests/snapshots/record_field_type__snapshot_record_spread.snap
---
source: crates/tribute-front/tests/record_field_type.rs
expression: ir_text
---
core.module @test {
  !Point = adt.struct<Point(x: core.i32, y: core.i32)>
  !Point_1 = adt.typeref<{name = "Point"}>
  !t0 = tribute_control.func_sig<(!Point_1) -> core.i32, {tribute.calling_convention = 0}>

  tribute_control.func @"Point::x"(%0: !Point_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 0, type = !Point} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Point::y"(%0: !Point_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 1, type = !Point} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @update_x(%0: !Point_1) -> !Point_1 convention(direct) {
      %1 = arith.const {value = 100} : core.i32
      %2 = adt.struct_get %0 {field = 1, type = !Point} : core.i32
      %3 = adt.struct_new %1, %2 {type = !Point} : !Point_1
      tribute_control.return %3
  }
}
